# SuperSpring22

./: CMakeLists.txt  README.md  SuperSpring22.sln  unique.txt
Debug/: glad.idb
SuperSpring22/: CmakeLists.txt  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  GameMap.cpp  GameMap.h  Player.cpp  Player.h  SpringApp.cpp  SpringApp.h  SuperSpring22.vcxproj  SuperSpring22.vcxproj.filters  main.cpp
SuperSpring22/assets/levels/: one.txt  two.txt
TDE/: CMakeLists.txt  Core.h  EntryPoint.h  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  KeyCodes.h  Renderer.cpp  Renderer.h  RendererInterface.h  Shader.cpp  Shader.h  ShaderInterface.h  Sprite.cpp  Sprite.h  SpriteInterface.h  TDE.h  TDE.vcxproj  TDE.vcxproj.filters  TDEApp.cpp  TDEApp.h  TDEUtil.h  WindowImplementation.h  WindowInterface.h  pch.h
TDE/assets/shaders/: VertexShaderDefault.glsl
TDE/opengl/: GlfwWindow.cpp  GlfwWindow.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h  WinWindow.cpp  WinWindow.h
TDE/specificGLFW/: GlfwWindow.cpp  GlfwWindow.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
